feat(apps/desktop): first version of the desktop app